project1/src/objects/Firm__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country in which the firm resides.</description>
        <label>Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <label>Firm Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Firm_Owner_Ref__c</fullName>
        <description>Refers to the respective firm.</description>
        <label>Firm Owner Ref</label>
        <referenceTo>Firm_Owner__c</referenceTo>
        <relationshipLabel>Firms</relationshipLabel>
        <relationshipName>Firms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Firm</label>
    <nameField>
        <displayFormat>F-{000}</displayFormat>
        <label>Firm Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Firms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>